# jitana

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
doc/: design.dot  dex_file_structure.xlsx  dex_instructions.xlsx  figures.cpp  jitana_on_ubuntu.md  jitana_on_windows.md
doxygen/: Doxyfile.in  DoxygenLayout.xml  header.html  stylesheet.css
include/jitana/: jitana.hpp
include/jitana/algorithm/: monotonic_dataflow.hpp  property_tree.hpp  unique_sort.hpp
include/jitana/analysis/: call_graph.hpp  cha_call_graph.hpp  content_provider_flow.hpp  content_provider_flow_string.hpp  data_flow.hpp  def_use.hpp  exception_flow.hpp  ide.hpp  intent_flow.hpp  intent_flow_intraprocedural.hpp  intent_flow_string.hpp  points_to.hpp  resource_sharing.hpp  symbolic_execution.hpp  symbolic_execution_old.hpp
include/jitana/analysis_graph/: contextual_call_graph.hpp  labeled_exploded_super_graph.hpp  pointer_assignment_graph.hpp  resource_sharing_graph.hpp
include/jitana/core/: access_flags.hpp  class_loader.hpp  dex_file.hpp  dex_raw_types.hpp  hdl.hpp  idx.hpp  insn.hpp  insn_info.hpp  variable.hpp  virtual_machine.hpp
include/jitana/graph/: class_graph.hpp  edge_filtered_graph.hpp  field_graph.hpp  graph_common.hpp  graphviz.hpp  insn_graph.hpp  loader_graph.hpp  method_graph.hpp
include/jitana/util/: jdwp.hpp  stream_reader.hpp
include/jitana/vm_core/: access_flags.hpp  apk_info.hpp  class_loader.hpp  dex_file.hpp  dex_raw_types.hpp  hdl.hpp  idx.hpp  insn.hpp  insn_info.hpp  opcode.hpp  variable.hpp  virtual_machine.hpp
include/jitana/vm_graph/: class_graph.hpp  edge_filtered_graph.hpp  field_graph.hpp  graph_common.hpp  graphviz.hpp  insn_graph.hpp  loader_graph.hpp  method_graph.hpp
lib/jitana/analysis/: cha_call_graph.cpp  points_to.cpp  symbolic_execution.cpp
lib/jitana/core/: class_loader.cpp  dex_file.cpp  insn_info.cpp  virtual_machine.cpp
lib/jitana/util/: axml_parser.cpp  jdwp.cpp
lib/jitana/vm_core/: class_loader.cpp  dex_file.cpp  insn_info.cpp  virtual_machine.cpp
scripts/git/: pre-commit
test/: test_class_graph.cpp  test_insn.cpp  test_points_to.cpp  test_virtual_machine.cpp  unit_test.cpp
tools/jitana-bench/: CMakeLists.txt  main.cpp
tools/jitana-bench/scripts/: launch
tools/jitana-graph/: CMakeLists.txt  main.cpp
tools/jitana-iac/: CMakeLists.txt  README  README.md  main.cpp
tools/jitana-iac/scripts/: launch  launch_sr_device.sh  scan-device  scan-directory  simplify-dot
tools/jitana-ide/: CMakeLists.txt  main.cpp
tools/jitana-travis/: CMakeLists.txt  dalvik_diff.txt  main.cpp
tools/jitana-travis/dalvik-patches/: 0001-Add-Traviz-support.patch  0002-Set-aside-APK-JAR-DEX-files-for-Jitana.patch
tools/jitana-travis/scripts/: kill_monkey  launch  launch-text  pull-apks  pull-odex
